--- a/rock.css
+++ b/rock.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Single+Day&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@700&display=swap');
     
 body{
-    font-family:'Single Day', cursive;
+    font-family: 'Nanum Gothic Coding', monospace;
 }
 
 button{
-    font-family:'Single Day', cursive;
+    font-family: 'Nanum Gothic Coding', monospace;
 }
 #picture{
     width:280px; height:350px;
@@ -14,11 +14,11 @@ button{
 }
 
 #title, #result{
-    text-align: center; font-size:20pt;
+    text-align: center; font-size:20pt; margin-top:20px;
 }
 
 .btn{ 
-    font-size: 15pt;
+    font-size: 15pt; padding:7px;
 }
 
 .buttons{
